--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.0.1",
     "lodash": "^4.17.4",
+    "moment": "^2.19.1",
     "mongodb": "^2.2.31",
     "mongoose": "^4.12.0",
     "mongoose-timestamp": "^0.6.0",
