--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.2.1",
     "request": "^2.83.0",
+    "socket.io": "^2.0.4",
     "validator": "^9.0.0"
   }
 }
