--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "request": "^2.83.0",
     "socket.io": "^2.0.4",
     "validator": "^9.0.0"
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^0.17.4"
   }
 }
